- automatic subscopes of the host scope are disabled so only connections
  to existing applications are possible
- running "ant" after setup keeps wrapper configuration (Trac #76)
- mp3 files with unsupported sample rates are detected (Trac #66)
- timestamps of recorded .flv files were wrong sometimes (Trac #78)
- stream types could be reused leading to a ClassCastException (Trac #84)


Red5 0.5rc1 (2006-07-11)
------------------------
New features:
- refactored streaming code
- refactored scope services
- refactored rtmp message de-/encoding
- enabled subscopes
- bandwidth control for on-demand streams
- experimental support for serverside streams
- added dynamic "onMetaData" for mp3 streams
- added persistence for scopes and shared objects
- added support for simple "directory-only" applications
- added remoting client support (sync / async)
- added deserializer for RecordSet remoting results
- arbitrary objects can be registered as service handlers
- IClientRegistry can be customized for each scope
- WEB-INF directories are added to the classpath (Trac #27)
- clients can be rejected with a custom error message
- basic "onMetaData" is generated dynamically for .flv files without any
  meta data (Trac #23)

Bugfixes:
- mp3 files that have their protection bit set
- mp3 files encoded MPEG 2, Layer III (Trac #15)
- mp3 files with incomplete last frame
- shared objects bugfixes (Trac #11, #22, #25)
- application handlers were not called on disconnect
- IConnection.close() now closes connection (Trac #19)
- connecting to non-existent applications returns correct error now
- Jetty correctly runs on all virtual hosts (Trac #26)
- Map objects are serialized correctly
- methods could be invoked with converted parameters before invoking them
  with the original parameters
- support invoking methods with "null" as parameter (Trac #29)
- directories for recorded files are created if they don't exist (Trac #20)